(executables
 (names main on_closed multi_receive rpc_server rpc_client)
 (libraries amqp-client-lwt))

; (executables
;  (names rpc_server rpc_client main on_closed multi_receive)
;  (libraries amqp-client-lwt)
; )

; (alias
;  (name examples)
;  (deps rpc_server.exe rpc_client.exe main.exe on_closed.exe multi_receive.exe)
; )

; (alias
;  (name    runtest)
;  (deps    rpc_server.exe rpc_client.exe)
;  (package amqp-client-lwt)
; )
